base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sf-mass-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: sf-mass.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sf-mass-service
                port:
                  number: 81
